fix dropdown button alignment, color and size

--- a/src/components/LanguageSelect/LanguageSelect.css
+++ b/src/components/LanguageSelect/LanguageSelect.css
@@ -1,11 +1,12 @@
 .dropdown-button {
 	border: none;
-  color: #b1b7bf;
+  color: #bfc4ca;
   font-family: Lato, system-ui, '.SFNSText-Regular';
 	font-size: 23px;
 	background-color: #384452;
   cursor: pointer;
   margin: 0;
+  display: flex;
 }
 
 .dropdown-content {
@@ -28,10 +29,11 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  font-size: 16px;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 30px;
   min-width: 100px;
   border-radius: 6px;
 }
